web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-web
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      nodePort: 30950
      targetPort: 80
      port: 80
  selector:
    app: todo-web
